Correction z-index to tabs and dropdown

--- a/source/assets/stylesheets/locastyle/modules/_dropdown.sass
+++ b/source/assets/stylesheets/locastyle/modules/_dropdown.sass
@@ -1,6 +1,7 @@
 .ls-dropdown
   position: relative
   display: inline-block
+  z-index: 2
 
   .ls-dropdown-nav
     list-style: none
